--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.skillboost_aicoach">
 
     <!-- Permisos para Android 13+ -->
@@ -9,12 +10,12 @@
     <!-- Permisos para versiones anteriores a Android 13 -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        android:maxSdkVersion="29"/>
+        android:maxSdkVersion="29"
+        tools:replace="android:maxSdkVersion"/>
 
     <!-- Para Android 11+ (acceso completo a almacenamiento externo) -->
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
     
-
     <application
         android:label="skillboost_aicoach"
         android:name="${applicationName}"
